--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,46 @@ obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
+*.pydevproject 
+ .metadata 
+ .gradle 
+ bin/ 
+ tmp/ 
+ *.tmp 
+ *.bak 
+ *.swp 
+ *~.nib 
+ local.properties 
+ .settings/ 
+ .loadpath 
+ 
+ 
+ # Eclipse Core 
+ .project 
+ 
+ 
+ # External tool builders 
+ .externalToolBuilders/ 
+ 
+ 
+ # Locally stored "Eclipse launch configurations" 
+ *.launch 
+ 
+ 
+ # CDT-specific 
+ .cproject 
+ 
+ 
+ # JDT-specific (Eclipse Java Development Tools) 
+ .classpath 
+ 
+ 
+ # PDT-specific 
+ .buildpath
+ 
+# sbteclipse plugin 
+.target 
+ 
+# TeXlipse plugin 
+.texlipse 
+
