--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,46 @@ _ReSharper*/
 # TeXlipse plugin 
 .texlipse 
 
+.metadata/.plugins/org.eclipse.core.resources/.history/12/608dbf07a4c50014116a81aa4fbcc207
+.metadata/.plugins/org.eclipse.core.resources/.history/29/e036c307a4c50014116a81aa4fbcc207
+.metadata/.plugins/org.eclipse.core.resources/.history/36/a047bb07a4c50014116a81aa4fbcc207
+.metadata/.plugins/org.eclipse.core.resources/.history/bd/7007c707a4c50014116a81aa4fbcc207
+.metadata/.plugins/org.eclipse.core.resources/.projects/559942-ExamOOP2-2014-term1-Le/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/559942-ExamOOP2-2014-term1-Le/.syncinfo.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises - Copy/.indexes/properties.index
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises - Copy/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises - Copy/.syncinfo.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises - Copy/org.eclipse.egit.core/GitProjectData.properties
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/.indexes/e4/23/history.index
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/.indexes/history.index
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/.syncinfo.snap
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/org.eclipse.jdt.core/state.dat
+.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
+.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+.metadata/.plugins/org.eclipse.core.resources/7.snap
+.metadata/.plugins/org.eclipse.debug.core/.launches/Controller (1).launch
+.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.jdt.core/2101789119.index
+.metadata/.plugins/org.eclipse.jdt.core/737923372.index
+.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/3/11/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/3/11/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/Exercises/2015/3/11/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/Exercises/2015/3/11/refactorings.index
+.metadata/.plugins/org.eclipse.team.cvs.core/.running
+.metadata/version.ini
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/.indexes/history.index
+.metadata/.plugins/org.eclipse.core.resources/.projects/Exercises/org.eclipse.jdt.core/state.dat
+.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
+.metadata/version.ini
